adds link to main nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a class="catalogItem catalogNewItem" href="#">Новинки</a>
             </li>
             <li>
-              <a class="catalogItem" href="#">Сливочное</a>
+              <a class="catalogItem" href="./catalog.html">Сливочное</a>
             </li>
             <li>
               <a class="catalogItem" href="#">Щербеты</a>
