adds catalog.html markup

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         <section class="hits">
           <ul class="hitsList">
             <li class="hitItem">
-              <img class="hitImage" src="https://placehold.it/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
-              <p class="hitPrice">
-                <span class="hitPriceValue">310&#8381;</span>
-                <span class="hitPriceMeasure">&#47;кг</span>
+              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
+              <p class="productPrice">
+                <span class="productPriceValue">310&#8381;</span>
+                <span class="productPriceMeasure">&#47;кг</span>
               </p>
-              <p class="hitDescription">
+              <p class="productDescription">
                 <a href="#">
                   Сливочное с апельсиновым джемом и цитрусовой стружкой
                 </a>
@@ -151,12 +151,12 @@
               <a class="commonButton">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="hitImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
-              <p class="hitPrice">
-                <span class="hitPriceValue">380&#8381;</span>
-                <span class="hitPriceMeasure">&#47;кг</span>
+              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
+              <p class="productPrice">
+                <span class="productPriceValue">380&#8381;</span>
+                <span class="productPriceMeasure">&#47;кг</span>
               </p>
-              <p class="hitDescription">
+              <p class="productDescription">
                 <a href="#">
                   Сливочно-кофейное с кусочками шоколада
                 </a>
@@ -164,12 +164,12 @@
               <a class="commonButton">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="hitImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
-              <p class="hitPrice">
-                <span class="hitPriceValue">355&#8381;</span>
-                <span class="hitPriceMeasure">&#47;кг</span>
+              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
+              <p class="productPrice">
+                <span class="productPriceValue">355&#8381;</span>
+                <span class="productPriceMeasure">&#47;кг</span>
               </p>
-              <p class="hitDescription">
+              <p class="productDescription">
                 <a href="#">
                   Сливочно-клубничное с присыпкой из белого шоколада
                 </a>
@@ -177,12 +177,12 @@
               <a class="commonButton">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="hitImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
-              <p class="hitPrice">
-                <span class="hitPriceValue">415&#8381;</span>
-                <span class="hitPriceMeasure">&#47;кг</span>
+              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
+              <p class="productPrice">
+                <span class="productPriceValue">415&#8381;</span>
+                <span class="productPriceMeasure">&#47;кг</span>
               </p>
-              <p class="hitDescription">
+              <p class="productDescription">
                 <a href="#">
                   Сливочное крем-брюле с карамельной подливкой
                 </a>
