adds link to product preview button

--- a/catalog.html
+++ b/catalog.html
@@ -216,7 +216,7 @@
                 Сливочное с апельсиновым джемом и цитрусовой стружкой
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
@@ -229,7 +229,7 @@
                 Сливочно-кофейное с кусочками шоколада
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
@@ -242,7 +242,7 @@
                 Сливочно-клубничное с присыпкой из белого шоколада
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
@@ -255,7 +255,7 @@
                 Сливочное крем-брюле с карамельной подливкой
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с брусничным джемом" width="267" height="267">
@@ -268,7 +268,7 @@
                 Сливочное с брусничным джемом
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-черничное с цельными ягодами черники" width="267" height="267">
@@ -281,7 +281,7 @@
                 Сливочно-черничное с цельными ягодами черники
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-лимонное с карамельной присыпкой" width="267" height="267">
@@ -294,7 +294,7 @@
                 Сливочно-лимонное с карамельной присыпкой
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с шоколадной стружкой" width="267" height="267">
@@ -307,7 +307,7 @@
                 Сливочное с шоколадной стружкой
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-ванильное с кусочками шоколада" width="267" height="267">
@@ -320,7 +320,7 @@
                 Сливочно-ванильное с кусочками шоколада
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с ментоловым сиропом" width="267" height="267">
@@ -333,7 +333,7 @@
                 Сливочное с ментоловым сиропом
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с кусочками черного шоколада" width="267" height="267">
@@ -346,7 +346,7 @@
                 Сливочное с кусочками черного шоколада
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
             <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с мятным сиропом" width="267" height="267">
@@ -359,7 +359,7 @@
                 Сливочное с мятным сиропом
               </a>
             </p>
-            <a class="commonButton">Быстрый просмотр</a>
+            <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
         </ul>
       </section>
