--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   Сливочное с апельсиновым джемом и цитрусовой стружкой
                 </a>
               </p>
-              <a class="commonButton">Быстрый просмотр</a>
+              <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
               <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
@@ -161,7 +161,7 @@
                   Сливочно-кофейное с кусочками шоколада
                 </a>
               </p>
-              <a class="commonButton">Быстрый просмотр</a>
+              <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
               <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
@@ -174,7 +174,7 @@
                   Сливочно-клубничное с присыпкой из белого шоколада
                 </a>
               </p>
-              <a class="commonButton">Быстрый просмотр</a>
+              <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
               <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
@@ -187,7 +187,7 @@
                   Сливочное крем-брюле с карамельной подливкой
                 </a>
               </p>
-              <a class="commonButton">Быстрый просмотр</a>
+              <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
           </ul>
         </section>
