--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           </ul>
         </section>
         <section class="hits">
+          <h2 class="visuallyHidden">Хиты продаж</h2>
           <ul class="hitsList">
             <li class="hitItem">
               <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
@@ -219,6 +220,7 @@
             </p>
           </section>
           <section class="subscription">
+            <h2 class="visuallyHidden">Подписка на рассылку</h2>
             <form class="subscriptionForm" action="https://echo.htmlacademy.ru/" method="post">
               <p class="subscriptionDescription">
                 Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
@@ -230,6 +232,7 @@
         </div>
       </div>
       <section class="map">
+        <h2 class="visuallyHidden">Мы на карте</h2>
         <div class="contactsContainer">
           <div class="mapContacts">
             <p>
