--- a/catalog.html
+++ b/catalog.html
@@ -384,7 +384,7 @@
             <a class="paginationNumber" href="#">5</a>
           </li>
         </ul>
-        <a class="paginationControl paginationControlForward">
+        <a class="paginationControl paginationControlForward" href="#">
           <span class="visuallyHidden">Вперёд</span>
         </a>
       </div>
@@ -440,7 +440,7 @@
       </div>
       <div class="footerCopyright">
         <img class="copyrightLogo" src="https://placehold.it/108x39" alt="Логотип HTML Academy" width="108" height="39">
-        <span>Сделано в <a class="footerCopyrightLink" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2018</span>
+        <span>Сделано в <a class="footerCopyrightLink" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2018</span>
       </div>
     </footer>
   </body>
